// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugins/ChannelHeaderPlug should match snapshot with one extended component 1`] = `
<DocumentFragment>
  <div>
    <button
      class="channel-header__icon"
      id="someid"
    >
      <i
        class="fa fa-anchor"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`plugins/ChannelHeaderPlug should match snapshot with six extended components 1`] = `
<DocumentFragment>
  <div>
    <button
      class="channel-header__icon"
      id="someid"
    >
      <i
        class="fa fa-anchor"
      />
    </button>
  </div>
  <div>
    <button
      class="channel-header__icon"
      id="someid2"
    >
      <i
        class="fa fa-anchor"
      />
    </button>
  </div>
  <div>
    <button
      class="channel-header__icon"
      id="someid3"
    >
      <i
        class="fa fa-anchor"
      />
    </button>
  </div>
  <div>
    <button
      class="channel-header__icon"
      id="someid4"
    >
      <i
        class="fa fa-anchor"
      />
    </button>
  </div>
  <div>
    <button
      class="channel-header__icon"
      id="someid5"
    >
      <i
        class="fa fa-anchor"
      />
    </button>
  </div>
  <div>
    <button
      class="channel-header__icon"
      id="someid6"
    >
      <i
        class="fa fa-anchor"
      />
    </button>
  </div>
  <div>
    <button
      class="channel-header__icon"
      id="someid7"
    >
      <i
        class="fa fa-anchor"
      />
    </button>
  </div>
  <div>
    <button
      class="channel-header__icon"
      id="someid8"
    >
      <i
        class="fa fa-anchor"
      />
    </button>
  </div>
  <div>
    <button
      class="channel-header__icon"
      id="someid9"
    >
      <i
        class="fa fa-anchor"
      />
    </button>
  </div>
  <div>
    <button
      class="channel-header__icon"
      id="someid10"
    >
      <i
        class="fa fa-anchor"
      />
    </button>
  </div>
  <div>
    <button
      class="channel-header__icon"
      id="someid11"
    >
      <i
        class="fa fa-anchor"
      />
    </button>
  </div>
  <div>
    <button
      class="channel-header__icon"
      id="someid12"
    >
      <i
        class="fa fa-anchor"
      />
    </button>
  </div>
  <div>
    <button
      class="channel-header__icon"
      id="someid13"
    >
      <i
        class="fa fa-anchor"
      />
    </button>
  </div>
  <div>
    <button
      class="channel-header__icon"
      id="someid14"
    >
      <i
        class="fa fa-anchor"
      />
    </button>
  </div>
  <div>
    <button
      class="channel-header__icon"
      id="someid15"
    >
      <i
        class="fa fa-anchor"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`plugins/ChannelHeaderPlug should not render anything when the App Bar is visible 1`] = `<DocumentFragment />`;

exports[`plugins/ChannelHeaderPlug should not render anything with no extended component 1`] = `<DocumentFragment />`;
